// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawer renders empty state 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="m-view-header"
  >
    <div
      className="m-view-header__title"
    >
      Notifications
    </div>
    <button
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
      title="Close"
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <p>
      You have no notifications currently.
    </p>
    <p>
      Here you'll be notified about events like accidents and ghost vehicles on any bus routes you have selected on the Route Ladders page.
    </p>
  </div>
</div>
`;

exports[`NotificationDrawer renders notifications 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="m-view-header"
  >
    <div
      className="m-view-header__title"
    >
      Notifications
    </div>
    <button
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
      title="Close"
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <div
      className="m-notification-drawer__cards"
    >
      <div
        className="m-notification-drawer__header"
      >
        <span
          className="m-notification-drawer__n-unread"
        >
          1
           new
        </span>
        <button
          className="m-notification-drawer__mark-all-read-button"
          onClick={[Function]}
        >
          Mark all as read
        </button>
      </div>
      <ul>
        <li>
          <div
            className="m-card m-card--kiwi"
          >
            <button
              className="m-card__left"
              onClick={[Function]}
            >
              <div
                className="m-card__top-row"
              >
                <div
                  className="m-card__title"
                >
                  <span
                    className=""
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<svg/>",
                      }
                    }
                  />
                  No Operator
                </div>
                <div
                  className="m-card__time"
                >
                  0 min
                </div>
              </div>
              <div
                className="m-card__contents"
              >
                <div
                  className="m-card__body"
                >
                  OCC reported that an operator is not available on the r1, r2.
                </div>
                <ul
                  className="m-card__properties"
                >
                  <li>
                    <span
                      className="m-card__properties-label"
                    >
                      Run
                    </span>
                    <span
                      className="m-card__properties-value"
                    >
                      run1, run2
                    </span>
                  </li>
                </ul>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
